# protocol_wiki_helper

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
src/: context.py  update_entity_metadata.py  update_slot_data.py  wiki_utils.py
src/datagen/: download.py  extract.py  mappings.py  utils.py
src/entity_metadata/: entity_metadata_format_table.py  entity_metadata_tables.py  main_entities_table.py  mod.py
src/lib/: download.py  utils.py
src/updaters/: command_data.py  development_version.py  java_edition_protocol.py  packets.py  slot_data.py
src/updaters/entity_metadata/: __init__.py  entity_metadata_format_table.py  entity_metadata_tables.py  main_entities_table.py  util.py
